# job-assist

./: .env.example  .gitattributes  .gitignore  README.md  biome.json  package.json  pnpm-lock.yaml
apps/api/: .gitignore  README.md  alembic.ini  openapi.json  pyproject.toml
apps/api/migrations/: env.py
apps/api/migrations/versions/: 2026_05_14_0032-59e9badbd745_baseline.py  2026_05_15_1257-7b89ad40468f_core_schema_targets_jobs_outcomes.py  2026_05_15_1257-ed7dbe91ab45_seed_target_companies.py  2026_05_16_0900-a1f3c0b8e5d2_remove_target_company_seed_data.py  2026_05_17_0900-b2e4c1d7a9f1_add_applicant_count_to_job_posting.py  2026_05_18_0900-c5d8e2f1a7b3_add_operator_profile.py  2026_05_19_0900-d6f1e3a8c2b5_add_company_enrichment_columns.py  2026_05_20_0900-e7a9c4f2b6d8_add_department_team_to_job_posting.py  2026_05_21_0900-f8b3d5c9e1a4_add_division_table.py  2026_05_22_0900-a9c7e1b4f2d6_add_posting_action.py  2026_05_23_0900-b3d8e9c4f5a1_add_adapter_config_to_target_company.py  2026_05_24_0900-c4e2f1b7a3d9_add_contact_table.py  2026_05_25_0900-d5b9e8f3c2a1_add_jd_summary_columns.py  2026_05_26_0900-e6c2f1a8d4b9_add_salary_ceiling_and_seniority_levels.py  2026_05_26_0901-f7d3e2b9c5a1_extend_action_reason_check.py  2026_05_27_0900-b5c6d7e8f9a0_add_classifier_columns_to_job_posting.py  2026_05_28_0900-c6d7e8f9a0b1_add_icims_to_ats_enum.py  2026_05_29_0900-d7e8f9a0b1c2_add_fit_score_columns_to_job_posting.py  2026_05_30_0900-e8f9a0b1c2d3_add_archived_at_and_target_company_to_contact.py  2026_06_02_0900-a1b2c3d4e5f6_raise_applicant_cap_default_to_500.py  2026_06_03_0900-f9a0b1c2d3e4_add_outreach_message_and_contact_phone.py  2026_06_04_0900-b2c3d4e5f6a7_add_handle_not_found_to_ingest_run_status.py  2026_06_04_1000-c3d4e5f6a7b8_fix_plaid_atlassian_ats_handles.py  2026_06_05_0900-d4e5f6a7b8c9_add_hard_rule_eligibility_to_job_posting.py  2026_06_06_0900-e5f6a7b8c9d0_add_discovered_handle_table.py  2026_06_06_0915-f6a7b8c9d0e1_make_target_company_tier_nullable.py  2026_06_07_0900-a7b8c9d0e1f2_add_resume_version_tracking.py  2026_06_08_0900-b8c9d0e1f2a3_add_embedding_columns.py  2026_06_09_0900-c9d0e1f2a3b4_add_per_company_cap_to_operator_profile.py  2026_06_10_0900-d0e1f2a3b4c5_enable_vector_extension.py  2026_06_10_0901-e1f2a3b4c5d6_add_embedding_columns.py  2026_06_11_0900-f2a3b4c5d6e7_add_similarity_calibration_columns.py  2026_06_12_0900-a3b4c5d6e7f8_add_target_company_source.py  2026_06_12_2200-a9f1b2wellf6_add_wellfound_to_ats_enum.py  2026_06_13_0900-b4c5d6e7f8a9_deactivate_dead_lever_handles.py  2026_06_14_0900-c5d6e7f8a9b0_add_application_resume.py  2026_06_14_1000-d6e7f8a9b0c1_resolve_des_moines_employer_ats.py  2026_06_14_1200-e7f8a9b0c1d2_application_state_status_text_check.py  2026_06_15_0900-f8a9b0c1d2e3_john_hancock_apify_domain.py  2026_06_15_1400-b7c8d9e0f1a2_operator_profile_boston_geo.py  (+7 more)
apps/api/scripts/: discover_handles.py  start.sh  tippie_to_contacts_json.py  validate_strategy_classifier.py
apps/api/seeds/: target_companies.example.json
apps/api/src/job_assist/: __init__.py  cli.py  config.py  contact_seed.py  main.py  seed.py
apps/api/src/job_assist/adapters/: __init__.py  ashby.py  base.py  fantastic_jobs.py  greenhouse.py  icims.py  lever.py  normalization.py  title_filter.py  wellfound.py  workday.py
apps/api/src/job_assist/db/: __init__.py  base.py  enums.py  schema_guard.py  session.py
apps/api/src/job_assist/eval/: README.md  __init__.py  api_client.py  gemini_score.py  openai_labeler.py  prompts.py  run.py  sample.py  verify.py
apps/api/src/job_assist/gmail/: __init__.py  backfill.py  classifier.py  client.py  models.py  sweep_lock.py
apps/api/src/job_assist/schemas/: __init__.py  application_state.py  closed_channel.py  contact.py  embeddings.py  ingest_run.py  (+12 more)
apps/api/tests/: conftest.py  test_adapter_browser_headers.py  test_admin_gmail_poll_endpoint.py  test_admin_outcomes_stats.py  test_admin_reclassify.py  test_admin_resume_extract.py  test_admin_score_sweep.py  test_application_resume.py  test_auth_middleware.py  test_bulk_posting_state.py  test_company_crawl_config.py  test_company_enrichment.py  test_contact_crud.py  test_contact_list_endpoint.py  test_contact_migration.py  test_contact_schema.py  test_contact_seed_endpoint.py  test_data_discipline.py  test_department_team_normalization.py  test_diagnostics_triples.py  test_division_enrichment.py  test_error_surfacing.py  test_health.py  test_icims_adapter.py  test_ingest_health.py  test_ingest_plan.py  test_jd_summary_enrichment.py  test_manual_application_status.py  test_operator_profile.py  test_operator_profile_schema.py  test_outcomes_overlay.py  test_outreach_message.py  test_outreach_message_migration.py  test_per_company_cap.py  test_plaid_atlassian_migration.py  test_posting_state.py  test_postings_sort.py  test_postings_state_rejected.py  test_pyproject_runtime_deps.py  test_read_endpoints.py  (+7 more)
apps/api/tests/adapters/: test_ashby.py  test_fantastic_jobs.py  test_greenhouse.py  test_lever.py  test_normalization.py  test_peek_title.py  test_title_filter.py  test_wellfound.py
apps/api/tests/cli/: test_discover_ats.py  test_discover_ats_batch.py
apps/api/tests/eval/: test_gemini_score.py  test_isolation.py  test_prompts.py  test_sample.py  test_verify.py
apps/api/tests/fixtures/: ashby_synthetic.json  greenhouse_stripe.json  lever_ramp.json
apps/api/tests/gmail/: test_backfill.py  test_classifier.py  test_client.py  test_match_target_company.py  test_poll.py  test_sweep_lock.py
apps/api/tests/services/: test_applied_companies.py  test_broad_ingest.py  test_cdx_discovery.py  test_classifier.py  test_company_name_match.py  test_company_signals.py  test_embeddings.py  test_fantastic_ingest.py  test_ingest_stats.py  test_ingestion.py  test_ingestion_title_prefilter.py  test_outcome_posting_match.py  test_outcome_relink.py  test_postings_export.py  test_postings_query.py  test_rescore.py  test_resume_extract.py  test_resume_version_tracking.py  test_scoring.py  test_sweep_claim.py  test_tracing.py  test_wellfound_ingest.py
apps/api/tests/triage/: test_hard_rules.py
(+354 files in other folders)
