[project]
name = "job-assist-api"
version = "0.0.1"
description = "Job Assist FastAPI backend — ingestion, triage, Gmail, RAG"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    # Web framework
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "pydantic>=2.9.0",
    "pydantic-settings>=2.6.0",
    # Database
    "sqlalchemy[asyncio]>=2.0.36",
    "alembic>=1.14.0",
    "asyncpg>=0.30.0",
    "psycopg2-binary>=2.9.0",
    "pgvector>=0.3.6",
    # HTTP / scraping
    "httpx>=0.27.0",
    "tenacity>=9.0.0",
    "selectolax>=0.3.21",
    # LLMs
    "google-genai>=0.3.0",
    "anthropic>=0.39.0",
    # Gmail
    "google-api-python-client>=2.150.0",
    "google-auth-httplib2>=0.2.0",
    "google-auth-oauthlib>=1.2.0",
    # Email (Resend SDK)
    "resend>=2.4.0",
    # Observability
    "structlog>=24.4.0",
    "sentry-sdk[fastapi]>=2.18.0",
    # CLI
    "typer>=0.15.0",
    # Excel export (feat/triage-export-xlsx). Used by both the runtime
    # ``GET /postings/export.xlsx`` endpoint AND the operator-local
    # ``scripts/tippie_to_contacts_json.py`` (PR #39). Promoted from
    # ``[dependency-groups] dev`` here so Railway installs it for the
    # export endpoint — a dev-only entry would 500 in production while
    # passing every local test.
    "openpyxl>=3.1.0",
]

[dependency-groups]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=6.0.0",
    "httpx>=0.27.0",
    "respx>=0.21.0",
    "ruff>=0.7.0",
    "mypy>=1.13.0",
    "types-requests>=2.32.0",
]

[project.scripts]
job-assist = "job_assist.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/job_assist"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = [
    "E", "F", "W",  # pycodestyle, pyflakes
    "I",            # isort
    "B",            # bugbear
    "UP",           # pyupgrade
    "RUF",          # ruff-specific
    "SIM",          # simplify
    "TID",          # tidy imports
]
ignore = ["E501"]  # line length handled by formatter

[tool.ruff.lint.per-file-ignores]
# Compensation-parser tests use the en-dash / em-dash characters that real
# ATS payloads contain (e.g. "$140K – $180K"); they're meaningful inputs,
# not stylistic typos, so the "ambiguous character" rules don't apply.
"tests/adapters/test_normalization.py" = ["RUF001"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.mypy]
python_version = "3.12"
strict = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
plugins = ["pydantic.mypy"]

[[tool.mypy.overrides]]
module = ["selectolax.*"]
ignore_missing_imports = true

[[tool.mypy.overrides]]
# openpyxl doesn't ship a py.typed marker. Stubs (types-openpyxl) exist on
# PyPI but they lag the library by several minor versions and pin the
# style/utils submodules incorrectly. The xlsx export call sites use a
# narrow surface (Workbook, Font, PatternFill, Alignment, get_column_letter)
# — all already validated at runtime by the export test (services/
# postings_export.py + scripts/tippie_to_contacts_json.py).
module = ["openpyxl.*"]
ignore_missing_imports = true

[[tool.mypy.overrides]]
# Google's API client libraries don't ship py.typed markers; the Credentials
# class is untyped under strict mode. Suppress missing-import / untyped-call
# errors only for those modules — our own gmail/* code remains strict.
module = ["googleapiclient.*", "google.oauth2.*"]
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
# Share one event loop across all async tests so the module-level SQLAlchemy
# engine in db/session.py stays on the same loop for the full test run.
# Without this, function-scoped loops cause "attached to a different loop"
# errors because pooled asyncpg connections are bound to the loop that
# created them.
asyncio_default_fixture_loop_scope = "session"
asyncio_default_test_loop_scope = "session"
addopts = "-ra --strict-markers --cov=job_assist --cov-report=term-missing"
